Closed Bug 949644 Opened 11 years ago Closed 11 years ago

Fix WGL function lookup

Categories

(Core :: Graphics, defect)

x86_64
Windows 8
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: vlad, Assigned: vlad)

Details

(Whiteboard: [qa-])

Attachments

(1 file)

Our WGL code is a bit weird, in that we end up always calling wglGetProcAddress for every function, including functions directly exposed by opengl32.dll such as "glBindTexture".  This should work.

When using AMD's CodeXL GL debugger though, they seem to have an issue in their wglGetProcAddress wrapper where it doesn't return the right thing for core functions like glBindTexture, leading the interception code never getting to see those functions.  This small patch makes us do the lookup in the library first (before this, mLibrary was always null for WGL contexts, we only had a lookup function).
Attachment #8346757 - Flags: review?(bjacob)
Attachment #8346757 - Flags: review?(bjacob) → review+
 https://hg.mozilla.org/integration/mozilla-inbound/rev/f01cde340097
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Please don't resolve bugs when landing on inbound.
Target Milestone: --- → mozilla29
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: