b=949644; set mLibrary in WGL contexts before calling Init; r=bjacob